// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c2 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  margin: 0 0.5rem;
  border-width: 0px thin 0px 0px;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

<body>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
      </p>
      <hr
        class="c1"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
      </p>
      <div
        style="display: flex;"
      >
        <p
          class="c0"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia sequi quam modi natus ipsum corrupti quis laudantium reiciendis error quas, voluptate eligendi possimus temporibus ipsam! Eveniet voluptates natus minima! Possimus.
        </p>
        <hr
          class="c2"
          role="separator"
        />
        <p
          class="c0"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium ab magni assumenda, iure corporis natus voluptas laborum error corrupti inventore hic aliquid, debitis adipisci necessitatibus repellendus dolores ratione architecto.
        </p>
      </div>
    </div>
  </body>,
  "container": .c1 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c2 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  margin: 0 0.5rem;
  border-width: 0px thin 0px 0px;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

<div>
    <p
      class="c0"
      role="contentinfo"
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
    </p>
    <hr
      class="c1"
      role="separator"
    />
    <p
      class="c0"
      role="contentinfo"
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
    </p>
    <div
      style="display: flex;"
    >
      <p
        class="c0"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia sequi quam modi natus ipsum corrupti quis laudantium reiciendis error quas, voluptate eligendi possimus temporibus ipsam! Eveniet voluptates natus minima! Possimus.
      </p>
      <hr
        class="c2"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusantium ab magni assumenda, iure corporis natus voluptas laborum error corrupti inventore hic aliquid, debitis adipisci necessitatibus repellendus dolores ratione architecto.
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Divider Dark mode basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

<body>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
      </p>
      <hr
        class="c1"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
      </p>
    </div>
  </body>,
  "container": .c1 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

<div>
    <p
      class="c0"
      role="contentinfo"
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
    </p>
    <hr
      class="c1"
      role="separator"
    />
    <p
      class="c0"
      role="contentinfo"
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Divider Density 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px thick;
  margin: 0.5rem 0;
}

.c2 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c3 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px medium;
  margin: 0.5rem 0;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

<body>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        thick density
      </p>
      <hr
        class="c1"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        thin density
      </p>
      <hr
        class="c2"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        medium density
      </p>
      <hr
        class="c3"
        role="separator"
      />
    </div>
  </body>,
  "container": .c1 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px thick;
  margin: 0.5rem 0;
}

.c2 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c3 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px medium;
  margin: 0.5rem 0;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

<div>
    <p
      class="c0"
      role="contentinfo"
    >
      thick density
    </p>
    <hr
      class="c1"
      role="separator"
    />
    <p
      class="c0"
      role="contentinfo"
    >
      thin density
    </p>
    <hr
      class="c2"
      role="separator"
    />
    <p
      class="c0"
      role="contentinfo"
    >
      medium density
    </p>
    <hr
      class="c3"
      role="separator"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Divider Shade 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  border-color: hsla(0,0%,15%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

<body>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        800 shade
      </p>
      <hr
        class="c1"
        role="separator"
      />
    </div>
  </body>,
  "container": .c1 {
  border-color: hsla(0,0%,15%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

<div>
    <p
      class="c0"
      role="contentinfo"
    >
      800 shade
    </p>
    <hr
      class="c1"
      role="separator"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Divider Tone 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  border-color: hsla(271,91%,65%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

<body>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        color major
      </p>
      <hr
        class="c1"
        role="separator"
      />
    </div>
  </body>,
  "container": .c1 {
  border-color: hsla(271,91%,65%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

<div>
    <p
      class="c0"
      role="contentinfo"
    >
      color major
    </p>
    <hr
      class="c1"
      role="separator"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Divider Variants 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: dashed;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c2 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: dotted;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c3 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: double;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c4 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: groove;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c5 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: hidden;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c6 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: ridge;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c7 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

<body>
    <div>
      <div>
        <p
          class="c0"
          role="contentinfo"
        >
          dashed
           style
        </p>
        <hr
          class="c1"
          role="separator"
        />
        <p
          class="c0"
          role="contentinfo"
        >
          dashed
           style
        </p>
      </div>
      <div>
        <p
          class="c0"
          role="contentinfo"
        >
          dotted
           style
        </p>
        <hr
          class="c2"
          role="separator"
        />
        <p
          class="c0"
          role="contentinfo"
        >
          dotted
           style
        </p>
      </div>
      <div>
        <p
          class="c0"
          role="contentinfo"
        >
          double
           style
        </p>
        <hr
          class="c3"
          role="separator"
        />
        <p
          class="c0"
          role="contentinfo"
        >
          double
           style
        </p>
      </div>
      <div>
        <p
          class="c0"
          role="contentinfo"
        >
          groove
           style
        </p>
        <hr
          class="c4"
          role="separator"
        />
        <p
          class="c0"
          role="contentinfo"
        >
          groove
           style
        </p>
      </div>
      <div>
        <p
          class="c0"
          role="contentinfo"
        >
          hidden
           style
        </p>
        <hr
          class="c5"
          role="separator"
        />
        <p
          class="c0"
          role="contentinfo"
        >
          hidden
           style
        </p>
      </div>
      <div>
        <p
          class="c0"
          role="contentinfo"
        >
          ridge
           style
        </p>
        <hr
          class="c6"
          role="separator"
        />
        <p
          class="c0"
          role="contentinfo"
        >
          ridge
           style
        </p>
      </div>
      <div>
        <p
          class="c0"
          role="contentinfo"
        >
          solid
           style
        </p>
        <hr
          class="c7"
          role="separator"
        />
        <p
          class="c0"
          role="contentinfo"
        >
          solid
           style
        </p>
      </div>
    </div>
  </body>,
  "container": .c1 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: dashed;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c2 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: dotted;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c3 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: double;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c4 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: groove;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c5 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: hidden;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c6 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: ridge;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c7 {
  border-color: hsla(0,0%,45%,1);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-style: solid;
  border-width: 0px 0px thin;
  margin: 0.5rem 0;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 0.875rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  line-height: 1.43;
}

<div>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        dashed
         style
      </p>
      <hr
        class="c1"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        dashed
         style
      </p>
    </div>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        dotted
         style
      </p>
      <hr
        class="c2"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        dotted
         style
      </p>
    </div>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        double
         style
      </p>
      <hr
        class="c3"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        double
         style
      </p>
    </div>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        groove
         style
      </p>
      <hr
        class="c4"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        groove
         style
      </p>
    </div>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        hidden
         style
      </p>
      <hr
        class="c5"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        hidden
         style
      </p>
    </div>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        ridge
         style
      </p>
      <hr
        class="c6"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        ridge
         style
      </p>
    </div>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        solid
         style
      </p>
      <hr
        class="c7"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        solid
         style
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
